--- a/src/app/project-component/project-component.component.html
+++ b/src/app/project-component/project-component.component.html
@@ -185,7 +185,7 @@
               </li>
               <li style="cursor: pointer;">
                 <a class="dropdown-item" (click)="onSortChange('dueDate')">
-                  Due Date
+                  Due Days
                   <span *ngIf="sortColumn === 'dueDate'">
                     ({{ sortDirection === 'asc' ? 'Ascending' : 'Descending' }})
                   </span>
